# polars-s3-wasi

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  cronjob.yaml  k8s-job.yaml  spin.toml
.spin/logs/: s3-wasm_stderr.txt  s3-wasm_stdout.txt
benchmarks/python/: Dockerfile  main.py  pyproject.toml
benchmarks/rust/: Cargo.toml  Makefile
benchmarks/rust/.cargo/: config.toml
benchmarks/rust/src/: main.rs
rayon-core-shim/: Cargo.toml
rayon-core-shim/src/: lib.rs
src/: main.rs
